--- a/views/backend/layout/main.html
+++ b/views/backend/layout/main.html
@@ -138,7 +138,7 @@
                         </div>
                         <div class="collapse navbar-collapse main-navbar-collapse">
                             <ul class="nav navbar-nav">
-                                <li class="active"><a href="#">我的面板</a></li>
+                                <li class="/*active*/"><a href="/backend/default/index">我的面板</a></li>
 								<li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-hover="dropdown">内容管理<b class="caret"></b></a>
                                     <ul class="dropdown-menu">
